<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PFC_alpha1</string>
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="action_share">Share</string>
    <string name="send_to">Send To</string>
    
    
    
    <!-- Settings -->
    <string name="pref_grouptitle">General</string>
    <string name="pref_autorefreshenabledTitle">Autorefresh</string>
    <string name="pref_autorefrehsenabledSummary">Autorefresh the list of parkings available. Default: 20min</string>
    <string name="pref_autorefreshtimeTitle">Autorefresh Time</string>
    <string name="pref_autorefreshtimeDialog">How much time do you want to wait between refreshs?</string>
    
    <string name="pref_radiusenabledTitle">Filter by radius</string>
    <string name="pref_radiusenabledSummary">Only show parkings inside a radius. Default: 2 km</string>
    <string name="pref_radiusdistTitle">Radius distance (in meters)</string>
    <string name="pref_radiusdistDefault">2000</string>
    
    <string name="pref_markercolorTitle">Markers Color</string>
    <string name="pref_markercolorSummary">Pic the color for your markers</string>
    
     <string name="pref_markercolorFREETitle">Free Parking Marker</string>
    <string name="pref_markercolorFREESummary">Pick the color for the free parking marker</string>
    <string name="pref_markercolorFREEdefault">3</string>
    <string name="pref_markercolorOCCUPIEDTitle">Occupied Parking Marker</string>
    <string name="pref_markercolorOCCUPIEDSummary">Pick the color for the occupied parking marker</string>
    <string name="pref_markercolorOCCUPIEDdefault">6</string>
    
    
    <!--  GCM -->
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">GCM Register</string>
    <string name="options_unregister">GCM Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    
    <!--  Sharing -->
    <string name="sh_title">Atention!</string>
    <string name="sh_example_type">Accident</string>
    <string name="sh_fill_1">in</string>
    <string name="sh_example_address">Carrer Santa Maria Cervelló, Universistat Politécnica de Catalunya</string>
    <string name="sh_example_time">Mon Dec 02 22:18:27 CET 2013</string>
    <string name="sh_share">Share the info</string>
    
    
</resources>
